# llvm-spirv

./: CMakeLists.txt  TODO  llvm-spirv.pc.in
cmake/: FindLLVM.cmake
lib/: CMakeLists.txt  OCL20ToSPIRV.cpp  OCL21ToSPIRV.cpp  OCLUtil.cpp  SPIRVInternal.h  SPIRVLowerConstExpr.cpp  SPIRVLowerMemmove.cpp  SPIRVLowerOCLBlocks.cpp  SPIRVReader.cpp  SPIRVToOCL20.cpp  SPIRVUtil.cpp  SPIRVWriter.cpp
lib/libSPIRV/: SPIRVBasicBlock.h  SPIRVDecorate.h  SPIRVEntry.h  SPIRVEnum.h  SPIRVErrorEnum.h  SPIRVFunction.h  SPIRVInstruction.h  SPIRVModule.cpp  SPIRVModule.h  SPIRVType.h  SPIRVUtil.cpp  SPIRVValue.h
test/: CMakeLists.txt  lit.cfg.in
tools/: CMakeLists.txt
tools/llvm-spirv/: CMakeLists.txt  llvm-spirv.cpp
