CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

include(GNUInstallDirs)

set(CMAKE_MODULE_PATH
  ${CMAKE_MODULE_PATH}
  "${CMAKE_CURRENT_SOURCE_DIR}/cmake"
  "${CMAKE_CURRENT_SOURCE_DIR}/cmake/modules"
  )

# Name & Version
PROJECT(LLVM_SPIRV)
SET(MAJOR_VERSION "0")
SET(MINOR_VERSION "1")
SET(PATCH_VERSION "0")
SET(SUBPATCH_VERSION "0")

# Libraries we need
INCLUDE(FindPkgConfig REQUIRED)
INCLUDE(FindLLVM REQUIRED)
IF(${LLVM_STRING_VERSION} VERSION_LESS 4.0)
	MESSAGE(FATAL_ERROR "LLVM >=2.8 is required!")
ENDIF(${LLVM_STRING_VERSION} VERSION_LESS 4.0)

INCLUDE_DIRECTORIES(${LLVM_INCLUDE_DIR})
LINK_DIRECTORIES(${LLVM_LIB_DIR})

set(LLVM_SPIRV_INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/include)

SUBDIRS(lib tools test)

install(
  FILES
    ${CMAKE_CURRENT_SOURCE_DIR}/include/SPIRV.h
  DESTINATION
    ${CMAKE_INSTALL_INCLUDEDIR}/llvm-spirv/)

