CMAKE_MINIMUM_REQUIRED(VERSION 3.1)

include(GNUInstallDirs)

set(CMAKE_MODULE_PATH
  ${CMAKE_MODULE_PATH}
  "${CMAKE_CURRENT_SOURCE_DIR}/cmake"
  "${CMAKE_CURRENT_SOURCE_DIR}/cmake/modules"
  )

# Name & Version
PROJECT(LLVM_SPIRV
  VERSION
    0.1.0.0
  LANGUAGES
    CXX)

# Libraries we need
INCLUDE(FindPkgConfig REQUIRED)
INCLUDE(FindLLVM REQUIRED)
IF(${LLVM_STRING_VERSION} VERSION_LESS 5.0)
	MESSAGE(FATAL_ERROR "LLVM >=5.0 is required!")
ENDIF(${LLVM_STRING_VERSION} VERSION_LESS 5.0)

INCLUDE_DIRECTORIES(${LLVM_INCLUDE_DIR})
LINK_DIRECTORIES(${LLVM_LIB_DIR})

set(LLVM_SPIRV_INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/include)

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
#set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra")

#SUBDIRS(lib tools test)
SUBDIRS(lib tools)

install(
  FILES
    ${CMAKE_CURRENT_SOURCE_DIR}/include/SPIRV.h
  DESTINATION
    ${CMAKE_INSTALL_INCLUDEDIR}/llvm-spirv/)


configure_file(llvm-spirv.pc.in ${CMAKE_BINARY_DIR}/llvm-spirv.pc @ONLY)
install(
  FILES
    ${CMAKE_BINARY_DIR}/llvm-spirv.pc
  DESTINATION
    ${CMAKE_INSTALL_LIBDIR}/pkgconfig)
